--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -55,7 +55,9 @@ button.new-chat-btn,
 button.settings-btn,
 button.back-btn,
 button.list-row,
-button.bizx-logo-btn {
+button.bizx-logo-btn,
+button.sb-profile,
+button.profile-menu__item {
   display: flex;
   justify-content: flex-start;
 }
